1
MAIN.C: In function ‘void init()’:
MAIN.C:35:5: error: expected ‘;’ before ‘SDL_Init’
     SDL_Init(SDL_INIT_VIDEO);
     ^~~~~~~~
